--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -4,9 +4,13 @@
   "description": "React examples",
   "main": "index.js",
   "scripts": {
+    "format": "prettier \"src/**/*.{js,html}\" --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^1.18.2"
+  }
 }
