--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier \"src/**/*.{js,html}\" --write",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
     "prettier": "^1.18.2"
   }
 }
