--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -4,6 +4,7 @@
   "description": "React examples",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.18.2"
   }
 }
