--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -17,5 +17,9 @@
     "eslint-config-prettier": "^6.4.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
