--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.18.2"
   },
