--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -24,6 +24,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   }
