Add Emotion and a NavBar component

--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -30,6 +30,8 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
     "react": "^16.11.0",
