--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -34,6 +34,7 @@
     "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
