--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -4,10 +4,12 @@
   "description": "React examples",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build --public-url ./dist/ src/index.html",
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "start": "npm run build && babel-node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -34,7 +36,8 @@
     "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
-    "moment": "^2.24.0",
+    "babel-cli": "^6.26.0",
+    "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
