--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -20,6 +20,9 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@types/reach__router": "^1.2.6",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "^6.5.1",
@@ -29,7 +32,8 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.1.2",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@babel/node": "^7.7.0",
