--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -40,7 +40,9 @@
     "babel-cli": "^6.26.0",
     "express": "^4.17.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "browserslist": [
     "last 2 Chrome versions",
