--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -32,12 +32,12 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.7.4",
     "@babel/node": "^7.7.0",
     "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
-    "babel-cli": "^6.26.0",
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
