--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -40,9 +40,7 @@
     "@reach/router": "^1.2.1",
     "express": "^4.17.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "react-dom": "^16.11.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
