--- a/adopt-me-v2/package.json
+++ b/adopt-me-v2/package.json
@@ -28,8 +28,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.1.2",
+    "jest": "^24.9.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-testing-library": "^8.0.1"
   },
   "dependencies": {
     "@babel/cli": "^7.7.4",
